; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_memory.c_MappedMemorySave.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_memory.c_MappedMemorySave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MappedMemorySave(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %53

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = call i32* @fopen(i8* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %16, i32** %8, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 -1, i32* %4, align 4
  br label %53

19:                                               ; preds = %14
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @malloc(i64 %20)
  %22 = inttoptr i64 %21 to i32*
  store i32* %22, i32** %9, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %19
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @fclose(i32* %25)
  store i32 -2, i32* %4, align 4
  br label %53

27:                                               ; preds = %19
  store i64 0, i64* %10, align 8
  br label %28

28:                                               ; preds = %40, %27
  %29 = load i64, i64* %10, align 8
  %30 = load i64, i64* %7, align 8
  %31 = icmp ult i64 %29, %30
  br i1 %31, label %32, label %43

32:                                               ; preds = %28
  %33 = load i64, i64* %6, align 8
  %34 = load i64, i64* %10, align 8
  %35 = add i64 %33, %34
  %36 = call i32 @MappedMemoryReadByte(i64 %35)
  %37 = load i32*, i32** %9, align 8
  %38 = load i64, i64* %10, align 8
  %39 = getelementptr inbounds i32, i32* %37, i64 %38
  store i32 %36, i32* %39, align 4
  br label %40

40:                                               ; preds = %32
  %41 = load i64, i64* %10, align 8
  %42 = add i64 %41, 1
  store i64 %42, i64* %10, align 8
  br label %28

43:                                               ; preds = %28
  %44 = load i32*, i32** %9, align 8
  %45 = bitcast i32* %44 to i8*
  %46 = load i64, i64* %7, align 8
  %47 = load i32*, i32** %8, align 8
  %48 = call i32 @fwrite(i8* %45, i32 1, i64 %46, i32* %47)
  %49 = load i32*, i32** %8, align 8
  %50 = call i32 @fclose(i32* %49)
  %51 = load i32*, i32** %9, align 8
  %52 = call i32 @free(i32* %51)
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %43, %24, %18, %13
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @malloc(i64) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @MappedMemoryReadByte(i64) #1

declare dso_local i32 @fwrite(i8*, i32, i64, i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
